# cargo-nebular-setup

./: Cargo.toml  README.md
resources/example/: compose.yml
resources/example/data/config/: admin.toml
resources/templates/: admin_template.toml  client_example.env  compose_template.yml  general_template.toml  reveal_md_template.yml  usage_template.txt
src/: main.rs
