[package]
name = "cargo-nebular-setup"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An setup script for the nebular store"
homepage = "https://nebular-store.rs"
documentation = ""
repository = "https://github.com/NebularStore/cargo-nebular-setup"
readme = "README.md"

[dependencies]
