[package]
name = "cargo-nebular-setup"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "An setup script for the nebular store"
homepage = "https://home.nebular-store.rs"
documentation = "https://docs.nebular-store.rs"
repository = "https://github.com/NebularStore/cargo-nebular-setup"
readme = "README.md"

[dependencies]
public-ip-addr = "0.1.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
